--- a/package.json
+++ b/package.json
@@ -25,22 +25,23 @@
     "@storybook/addon-onboarding": "^9.0.17",
     "@storybook/addon-vitest": "^9.0.17",
     "@storybook/react-vite": "^9.0.17",
+    "@types/node": "^24.0.15",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "@vitest/browser": "3.2.4",
+    "@vitest/coverage-v8": "3.2.4",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-storybook": "^9.0.17",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
+    "playwright": "^1.54.1",
     "storybook": "^9.0.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "3.2.4",
-    "playwright": "^1.54.1",
-    "@vitest/coverage-v8": "3.2.4"
+    "vitest": "^3.2.4"
   }
 }
